# bitflags

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
include/: bitflags.h
tests/: CMakeLists.txt  tests.cpp
